--- a/chuyende/chuyende/Areas/Admin/Views/SanPhams/Details.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/SanPhams/Details.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
+<h3>Xem chi tiết sản phẩm</h3>
 <div class="product-container">
     <div class="product-images">
         <img class="product-main-image" style="max-width: 400px; max-height: 400px;" src="@Url.Content("~/img/sanpham/" + Model.HinhAnh)" />
