--- a/chuyende/chuyende/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -43,7 +43,7 @@
                 <ul class="submenu">
                     <li class="@(Request.RequestContext.RouteData.Values["controller"].ToString() == "NhanViens" ? "active" : "")">
                         <a href="@Url.Action("Index", "NhanViens")">
-                            <i class="fas fa-user-shield"></i> Nhân Viên
+                            <i class="fas fa-user"></i> Nhân Viên
                         </a>
                     </li>
                     <li class="@(Request.RequestContext.RouteData.Values["controller"].ToString() == "ChucVus" ? "active" : "")">
