--- a/chuyende/chuyende/Areas/Admin/Views/Hangs/Index.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/Hangs/Index.cshtml
@@ -23,9 +23,22 @@
 
 
     </div>
-    <div class="actions">
-        <a href="@Url.Action("Create", "Hangs")" class="add-btn">Thêm mới</a>
+
+    <div class="header-actions">
+
+        @using (Html.BeginForm("Search", "Hangs", FormMethod.Get, new { @class = "search-form" }))
+        {
+            <input type="text" name="keyword" class="search-input" placeholder="Tìm kiếm hãng...">
+            <button type="submit" class="search-btn">
+                <i class="fas fa-search"></i> Tìm kiếm
+            </button>
+        }
+
+        <div class="actions">
+            <a href="@Url.Action("Create", "Hangs")" class="add-btn">Thêm mới</a>
+        </div>
     </div>
+    
 
     <table>
         <thead>
