--- a/chuyende/chuyende/Areas/Admin/Views/NhanViens/Index.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/NhanViens/Index.cshtml
@@ -23,9 +23,19 @@
 
 
     </div>
-    <div class="actions">
-        <a href="@Url.Action("Create", "NhanViens")" class="add-btn">Thêm mới</a>
+    <div class="header-actions">
 
+        @using (Html.BeginForm("Search", "NhanViens", FormMethod.Get, new { @class = "search-form" }))
+        {
+            <input type="text" name="keyword" class="search-input" placeholder="Tìm kiếm nhân viên...">
+            <button type="submit" class="search-btn">
+                <i class="fas fa-search"></i> Tìm kiếm
+            </button>
+        }
+
+        <div class="actions">
+            <a href="@Url.Action("Create", "NhanViens")" class="add-btn">Thêm mới</a>
+        </div>
     </div>
 
     <table>
