--- a/chuyende/chuyende/Public/css/Admin/admin.css
+++ b/chuyende/chuyende/Public/css/Admin/admin.css
@@ -136,7 +136,7 @@ table {
     .delete:hover {
         background-color: #d32f2f; /* Màu nền thay đổi khi hover */
     }
-    ..custom-alert-success {
+    .custom-alert-success {
     color: #155724;
     background-color: #d4edda;
     border-color: #c3e6cb;
@@ -144,6 +144,7 @@ table {
     margin-bottom: 15px;
     border-radius: 4px;
 }
+
 
 .custom-alert-danger {
     color: #721c24;
