--- a/chuyende/chuyende/Views/Shared/_Layout.cshtml
+++ b/chuyende/chuyende/Views/Shared/_Layout.cshtml
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ELECTRONICS STORE</title>
+    <title>@ViewBag.Title</title>
+    <link rel="icon" type="image/png" href="~/img/logo/logo.png">
     <link rel="stylesheet" href="~/Public/css/Use/layout.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/liELECTRONICS STOREbs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="~/Public/css/Use/dangnhap.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -14,7 +16,7 @@
     <header class="top-header">
         <div class="container">
             <!-- Logo -->
-            <a href="/" class="logo">
+            <a href="@Url.Action("Index","Home")" class="logo">
                 <img src="~/img/logo/logo.png" alt="" class="logo-img">
                 <h3 class="logo-text">ELECTRONICS STORE</h3>
             </a>
@@ -29,11 +31,11 @@
 
             <!-- User tools -->
             <div class="user-tools">
-                <a href="/dang-nhap" class="tool-item">
+                <a href="@Url.Action("Index","Login")" class="tool-item">
                     <i class="fas fa-user"></i>
                     <span>Đăng nhập</span>
                 </a>
-                <a href="/gio-hang" class="tool-item">
+                <a href="@Url.Action("Index","Cart")" class="tool-item">
                     <i class="fas fa-shopping-cart"></i>
                     <span>Giỏ hàng</span>
                 </a>
@@ -119,13 +121,7 @@
                         <a href="https://www.facebook.com/nguyenhuunghia1607" class="social-link"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://www.instagram.com/nguyenhuunghia1607/" class="social-link"><i class="fab fa-instagram"></i></a>
                     </div>
-                    <div class="app-download">
-                        <h4>Tải ứng dụng</h4>
-                        <div class="app-links">
-                            <a href="#" class="app-link"><img src="images/appstore.avif" alt="App Store"></a>
-                            <a href="#" class="app-link"><img src="images/chplay.png" alt="Google Play"></a>
-                        </div>
-                    </div>
+                   
                 </div>
             </div>
 
