--- a/fe/User/styles.css
+++ b/fe/User/styles.css
@@ -1181,8 +1181,8 @@ body {
     display: block;
     width: 100%;
     padding: 12px;
-    background-color: #ffd400;
-    color: #333;
+    background-color: #3209e6;
+    color: #ddd;
     border: none;
     border-radius: 6px;
     font-size: 16px;
@@ -1192,7 +1192,7 @@ body {
 }
 
 .btn-login:hover {
-    background-color: #ffc107;
+    background-color: #3209e6;
 }
 
 .social-login {
@@ -1550,8 +1550,8 @@ body {
 .checkout-btn {
     display: block;
     width: 100%;
-    background-color: #ffd400;
-    color: #333;
+    background-color: #3209e6;
+    color: #e0e0e0;
     font-weight: bold;
     padding: 12px;
     border: none;
@@ -1564,7 +1564,7 @@ body {
 }
 
 .checkout-btn:hover {
-    background-color: #f0c800;
+    background-color: #3209e6;
 }
 
 .promo-input {
