--- a/chuyende/chuyende/Areas/Admin/Views/SanPhams/Edit.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/SanPhams/Edit.cshtml
@@ -13,7 +13,7 @@
     @Html.HiddenFor(model => model.MaSP)
 
     <div class="form-group">
-        @Html.LabelFor(model => model.TenSP, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.TenSP, "Tên Sản Phẩm", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.TenSP, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.TenSP, "", new { @class = "text-danger" })
@@ -21,7 +21,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.HinhAnh, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.HinhAnh, "Hình Ảnh", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <input type="file" name="Hinhanh" id="Hinhanh" class="form-control" />
             @Html.ValidationMessageFor(model => model.HinhAnh, "", new { @class = "text-danger" })
@@ -29,7 +29,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.SoLuong, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.SoLuong, "Số Lượng", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.SoLuong, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.SoLuong, "", new { @class = "text-danger" })
@@ -37,15 +37,15 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.MoTa, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.KhuyenMai, "Khuyến Mãi", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.TextAreaFor(model => model.MoTa, new { @class = "form-control", rows = "5" })
-            @Html.ValidationMessageFor(model => model.MoTa, "", new { @class = "text-danger" })
+            @Html.TextAreaFor(model => model.KhuyenMai, new { @class = "form-control", rows = "5" })
+            @Html.ValidationMessageFor(model => model.KhuyenMai, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.TuKhoa, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.TuKhoa, "Từ Khóa", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.TuKhoa, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.TuKhoa, "", new { @class = "text-danger" })
@@ -53,7 +53,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.GiaNhap, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.GiaNhap, "Giá Nhập", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.GiaNhap, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.GiaNhap, "", new { @class = "text-danger" })
@@ -61,7 +61,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.GiaDau, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.GiaDau, "Giá Đầu", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.GiaDau, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.GiaDau, "", new { @class = "text-danger" })
@@ -69,7 +69,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.SoGiam, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.SoGiam, "Số % giảm", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.SoGiam, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.SoGiam, "", new { @class = "text-danger" })
@@ -79,21 +79,21 @@
     <div class="row">
         <div class="col-md-4">
             <div class="form-group">
-                @Html.LabelFor(model => model.Chip, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.Chip, "Chip", htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.Chip, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Chip, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="col-md-4">
             <div class="form-group">
-                @Html.LabelFor(model => model.Pin, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.Pin, "Pin", htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.Pin, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Pin, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="col-md-4">
             <div class="form-group">
-                @Html.LabelFor(model => model.CongSac, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.CongSac, "Cổng Sạc", htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.CongSac, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CongSac, "", new { @class = "text-danger" })
             </div>
@@ -103,21 +103,21 @@
     <div class="row">
         <div class="col-md-4">
             <div class="form-group">
-                @Html.LabelFor(model => model.HeDieuHanh, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.HeDieuHanh, "Hệ Điều Hành", htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.HeDieuHanh, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.HeDieuHanh, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="col-md-4">
             <div class="form-group">
-                @Html.LabelFor(model => model.DungLuong, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.DungLuong, "Dung Lượng", htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.DungLuong, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DungLuong, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="col-md-4">
             <div class="form-group">
-                @Html.LabelFor(model => model.Ram, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.Ram, "Ram", htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.Ram, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Ram, "", new { @class = "text-danger" })
             </div>
@@ -127,21 +127,21 @@
     <div class="row">
         <div class="col-md-4">
             <div class="form-group">
-                @Html.LabelFor(model => model.ManHinh, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.ManHinh, "Màn Hình", htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.ManHinh, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ManHinh, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="col-md-4">
             <div class="form-group">
-                @Html.LabelFor(model => model.TheSim, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.TheSim, "Thẻ Sim", htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.TheSim, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TheSim, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="col-md-4">
             <div class="form-group">
-                @Html.LabelFor(model => model.CamTruoc, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.CamTruoc, "Camera Trước", htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.CamTruoc, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CamTruoc, "", new { @class = "text-danger" })
             </div>
@@ -151,21 +151,21 @@
     <div class="row">
         <div class="col-md-4">
             <div class="form-group">
-                @Html.LabelFor(model => model.CamSau, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.CamSau, "Camera Sau", htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.CamSau, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CamSau, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="col-md-4">
             <div class="form-group">
-                @Html.LabelFor(model => model.Mau, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.Mau, "Màu", htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.Mau, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Mau, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="col-md-4">
             <div class="form-group">
-                @Html.LabelFor(model => model.KetNoi, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.KetNoi, "Kết Nối", htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.KetNoi, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.KetNoi, "", new { @class = "text-danger" })
             </div>
@@ -176,17 +176,19 @@
         <div class="col-md-6">
             <div class="form-group">
                 @Html.LabelFor(model => model.MaLoaiSP, "Loại sản phẩm", htmlAttributes: new { @class = "control-label" })
-                @Html.DropDownList("MaLoaiSP", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("MaLoaiSP", ViewBag.LoaiSPList as SelectList, "-- Chọn loại sản phẩm --", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.MaLoaiSP, "", new { @class = "text-danger" })
             </div>
         </div>
+
         <div class="col-md-6">
             <div class="form-group">
                 @Html.LabelFor(model => model.MaHang, "Hãng", htmlAttributes: new { @class = "control-label" })
-                @Html.DropDownList("MaHang", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("MaHang", ViewBag.HangList as SelectList, "-- Chọn hãng --", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.MaHang, "", new { @class = "text-danger" })
             </div>
         </div>
+
     </div>
 
 
