--- a/chuyende/chuyende/Areas/Admin/Views/ChucVus/Create.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/ChucVus/Create.cshtml
@@ -13,7 +13,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MaCV, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.MaCV,"Mã chức vụ", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.MaCV, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MaCV, "", new { @class = "text-danger" })
@@ -21,7 +21,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TenCV, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TenCV,"Tên chức vụ", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TenCV, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TenCV, "", new { @class = "text-danger" })
