--- a/chuyende/chuyende/Areas/Admin/Views/ChucVus/Edit.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/ChucVus/Edit.cshtml
@@ -14,7 +14,7 @@
 
 
     <div class="form-group">
-        @Html.LabelFor(model => model.TenCV, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.TenCV,"Tên chức vụ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.TenCV, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.TenCV, "", new { @class = "text-danger" })
