--- a/chuyende/chuyende/Areas/Admin/Views/Hangs/Edit.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/Hangs/Edit.cshtml
@@ -12,8 +12,9 @@
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.MaHang)
 
+
     <div class="form-group">
-        @Html.LabelFor(model => model.TenHang, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.TenHang, "Tên Hãng", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.TenHang, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.TenHang, "", new { @class = "text-danger" })
@@ -21,16 +22,16 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Logo, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Logo, "Logo", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-
             <input type="file" name="Logo" id="Logo" class="form-control" />
             @Html.ValidationMessageFor(model => model.Logo, "", new { @class = "text-danger" })
         </div>
     </div>
 
+
     <div class="form-group">
-        @Html.LabelFor(model => model.SoDienThoai, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.SoDienThoai, "Số Điện Thoại", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.SoDienThoai, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.SoDienThoai, "", new { @class = "text-danger" })
@@ -38,7 +39,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Email, "Email", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
@@ -46,7 +47,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.TuKhoa, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.TuKhoa, "Từ Khóa", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.TuKhoa, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.TuKhoa, "", new { @class = "text-danger" })
