--- a/chuyende/chuyende/Areas/Admin/Views/HoaDons/Create.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/HoaDons/Create.cshtml
@@ -13,7 +13,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MaHD, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.MaHD,"Mã Hóa Đơn", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.MaHD, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MaHD, "", new { @class = "text-danger" })
@@ -55,7 +55,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.NgayTao, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.NgayTao,"Ngày Tạo", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextBoxFor(model => model.NgayTao, new { @class = "form-control", type = "date" })
                 @Html.ValidationMessageFor(model => model.NgayTao, "", new { @class = "text-danger" })
@@ -64,7 +64,7 @@
 
 
         <div class="form-group">
-            @Html.LabelFor(model => model.NguoiTao, "Nhân viên tạo hóa đơn", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.NguoiTao, "Nhân viên", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("NguoiTao", ViewBag.NhanVienList as SelectList, "-- Chọn nhân viên --", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.NguoiTao, "", new { @class = "text-danger" })
