--- a/chuyende/chuyende/Areas/Admin/Views/LoaiSanPhams/Create.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/LoaiSanPhams/Create.cshtml
@@ -6,14 +6,14 @@
 }
 
 <div class="form-container">
-    <h3>Thêm mới thông tin chức vụ</h3>
+    <h3>Thêm mới thông tin loại sản phẩm</h3>
 
     @using (Html.BeginForm("Create", "LoaiSanPhams", FormMethod.Post, new { @class = "form-horizontal" }))
     {
         @Html.AntiForgeryToken()
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MaLoaiSP, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.MaLoaiSP,"Mã Loại Sản Phẩm", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.MaLoaiSP, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MaLoaiSP, "", new { @class = "text-danger" })
@@ -21,7 +21,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TenLoaiSP, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TenLoaiSP,"Tên Loại sản Phẩm", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TenLoaiSP, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TenLoaiSP, "", new { @class = "text-danger" })
