--- a/chuyende/chuyende/Areas/Admin/Views/LoaiSanPhams/Edit.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/LoaiSanPhams/Edit.cshtml
@@ -13,13 +13,13 @@
     @Html.HiddenFor(model => model.MaLoaiSP)
 
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.TenLoaiSP, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.TenLoaiSP, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.TenLoaiSP, "", new { @class = "text-danger" })
-        </div>
+<div class="form-group">
+    @Html.LabelFor(model => model.TenLoaiSP, "Tên Loại sản Phẩm", htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="col-md-10">
+        @Html.EditorFor(model => model.TenLoaiSP, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.TenLoaiSP, "", new { @class = "text-danger" })
     </div>
+</div>
 
 
     <div class="form-actions">
