--- a/chuyende/chuyende/Areas/Admin/Views/NhanViens/Create.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/NhanViens/Create.cshtml
@@ -13,7 +13,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MaNV, htmlAttributes: new { @class = "col-md-2 col-form-label" })
+            @Html.LabelFor(model => model.MaNV,"Mã Nhân Viên", htmlAttributes: new { @class = "col-md-2 col-form-label" })
             <div class="col-md-10">
                 @Html.TextBoxFor(model => model.MaNV, new { @class = "form-control", @type = "text" })
                 @Html.ValidationMessageFor(model => model.MaNV, "", new { @class = "text-danger" })
@@ -21,7 +21,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TenNV, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TenNV,"Tên Nhân Viên" ,htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TenNV, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TenNV, "", new { @class = "text-danger" })
@@ -29,15 +29,15 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MaCV, "MaCV", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.MaCV, "Tên Chức Vụ",htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("MaCV", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("MaCV",ViewBag.ChucVuList as SelectList, "-- Chọn chức vụ --", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.MaCV, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SoDienThoai, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SoDienThoai,"Số Điện Thoại", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.SoDienThoai, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.SoDienThoai, "", new { @class = "text-danger" })
@@ -45,7 +45,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Email,"Email", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
@@ -53,7 +53,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.NgaySinh, htmlAttributes: new { @class = "col-md-2 col-form-label" })
+            @Html.LabelFor(model => model.NgaySinh,"Ngày Sinh", htmlAttributes: new { @class = "col-md-2 col-form-label" })
             <div class="col-md-10">
                 @Html.TextBoxFor(model => model.NgaySinh, new { @class = "form-control", @type = "date" })
                 @Html.ValidationMessageFor(model => model.NgaySinh, "", new { @class = "text-danger" })
@@ -61,19 +61,20 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.GioiTinh, htmlAttributes: new { @class = "col-md-2 col-form-label" })
+            @Html.LabelFor(model => model.GioiTinh,"Giới Tính", htmlAttributes: new { @class = "col-md-2 col-form-label" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.GioiTinh, new List<SelectListItem>
-                {
-                    new SelectListItem { Text = "Nam", Value = "true" },
-                    new SelectListItem { Text = "Nữ", Value = "false" }
-                }, new { @class = "form-control" })
+                    {
+                        new SelectListItem { Text = "Nam", Value = "true" },
+                        new SelectListItem { Text = "Nữ", Value = "false" }
+                    }, "-- Chọn giới tính --", new { @class = "form-control" })
+
                 @Html.ValidationMessageFor(model => model.GioiTinh, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CCCD, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CCCD,"CCCD" ,htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CCCD, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CCCD, "", new { @class = "text-danger" })
@@ -81,7 +82,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DiaChi, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DiaChi,"Địa Chỉ", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DiaChi, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
@@ -89,7 +90,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TenDN, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TenDN,"Tên Đăng Nhập" ,htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TenDN, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TenDN, "", new { @class = "text-danger" })
@@ -97,7 +98,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MatKhau, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.MatKhau,"Mật Khẩu", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.MatKhau, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MatKhau, "", new { @class = "text-danger" })
