--- a/chuyende/chuyende/Views/Register/Index.cshtml
+++ b/chuyende/chuyende/Views/Register/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="login-container">
     <div class="login-header">
-        <h1 class="login-title">Xin chào</h1>
+        <h1 class="login-title">Xin chào mừng đến với cửa hàng</h1>
     </div>
     <div id="registerForm" class="tab-content">
         <form action="/register" method="post">
