--- a/chuyende/chuyende/Areas/Admin/Views/DangNhap/Index.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/DangNhap/Index.cshtml
@@ -19,19 +19,23 @@
         <h3 class="logo-text">ELECTRONICS STORE</h3>
         <h2 class="login-title">Đăng nhập quản lý</h2>
 
-        <div class="error-message" id="errorMessage">
-            <i class="fas fa-exclamation-circle"></i> Tên đăng nhập hoặc mật khẩu không đúng
-        </div>
+        @if (!string.IsNullOrEmpty(ViewBag.Error))
+        {
+            <div class="alert alert-danger mt-2">
+                <i class="fas fa-exclamation-circle"></i> @ViewBag.Error
+            </div>
+        }
 
-        <form id="loginForm">
+
+        <form id="loginForm" method="post" action="@Url.Action("Index", "DangNhap", new { area = "Admin" })">
             <div class="input-group">
                 <i class="fas fa-user"></i>
-                <input type="text" class="form-control" placeholder="Tên đăng nhập" required>
+                <input type="text" name="TenDN" class="form-control" placeholder="Tên đăng nhập" >
             </div>
 
             <div class="input-group">
                 <i class="fas fa-lock"></i>
-                <input type="password" class="form-control" placeholder="Mật khẩu" required>
+                <input type="password" name="MatKhau" class="form-control" placeholder="Mật khẩu" >
             </div>
 
             <button type="submit" class="login-button">Đăng nhập</button>
