--- a/chuyende/chuyende/Areas/Admin/Views/Hangs/Index.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/Hangs/Index.cshtml
@@ -33,10 +33,12 @@
                 <i class="fas fa-search"></i> Tìm kiếm
             </button>
         }
-
-        <div class="actions">
-            <a href="@Url.Action("Create", "Hangs")" class="add-btn">Thêm mới</a>
-        </div>
+        @if (Session["ChucVu"].ToString() == "nv" && Session["ChucVu"].ToString() != "Nhân Viên")
+        {
+            <div class="actions">
+                <a href="@Url.Action("Create", "Hangs")" class="add-btn">Thêm mới</a>
+            </div>
+        }
     </div>
     
 
@@ -72,15 +74,21 @@
 
                     <td>@Html.DisplayFor(modelItem => item.SoDienThoai)</td>
                     <td class="action-icons">
-                        <a href="@Url.Action("Edit","Hangs", new { id = item.MaHang })">
-                            <i class="fas fa-edit edit"></i>
-                        </a>
+                        @if (Session["ChucVu"].ToString() == "nv" && Session["ChucVu"].ToString() != "Nhân Viên")
+                        {
+                            <a href="@Url.Action("Edit", "Hangs", new { id = item.MaHang })">
+                                <i class="fas fa-edit edit"></i>
+                            </a>
+                        }
                         <a href="@Url.Action("Details","Hangs", new { id = item.MaHang })">
                             <i class="fas fa-eye view"></i>
                         </a>
-                        <a href="@Url.Action("Delete","Hangs", new { id = item.MaHang })">
-                            <i class="fas fa-trash delete"></i>
-                        </a>
+                        @if (Session["ChucVu"].ToString() == "nv" && Session["ChucVu"].ToString() != "Nhân Viên")
+                        {
+                            <a href="@Url.Action("Delete", "Hangs", new { id = item.MaHang })">
+                                <i class="fas fa-trash delete"></i>
+                            </a>
+                        }
                     </td>
                 </tr>
                 stt++;
