--- a/chuyende/chuyende/Areas/Admin/Views/LoaiSanPhams/Index.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/LoaiSanPhams/Index.cshtml
@@ -23,9 +23,13 @@
 
 
     </div>
-    <div class="actions">
-        <a href="@Url.Action("Create", "LoaiSanPhams")" class="add-btn">Thêm mới</a>
-    </div>
+    @if (Session["ChucVu"].ToString() == "nv" && Session["ChucVu"].ToString() != "Nhân Viên")
+    {
+        <div class="actions">
+            <a href="@Url.Action("Create", "LoaiSanPhams")" class="add-btn">Thêm mới</a>
+        </div>
+    }
+        
 
     <table>
         <thead>
@@ -45,15 +49,19 @@
                     <td>@Html.DisplayFor(modelItem => item.MaLoaiSP)</td>
                     <td>@Html.DisplayFor(modelItem => item.TenLoaiSP)</td>
                     <td class="action-icons">
-                        <a href="@Url.Action("Edit","LoaiSanPhams", new { id = item.MaLoaiSP })">
-                            <i class="fas fa-edit edit"></i>
-                        </a>
+                        @if (Session["ChucVu"].ToString() == "nv" && Session["ChucVu"].ToString() != "Nhân Viên") { 
+                            <a href="@Url.Action("Edit","LoaiSanPhams", new { id = item.MaLoaiSP })">
+                                <i class="fas fa-edit edit"></i>
+                            </a>
+                        }
                         <a href="@Url.Action("Details","LoaiSanPhams", new { id = item.MaLoaiSP })">
                             <i class="fas fa-eye view"></i>
                         </a>
-                        <a href="@Url.Action("Delete","LoaiSanPhams", new { id = item.MaLoaiSP })">
-                            <i class="fas fa-trash delete"></i>
-                        </a>
+                        @if (Session["ChucVu"].ToString() == "nv" && Session["ChucVu"].ToString() != "Nhân Viên") { 
+                            <a href="@Url.Action("Delete","LoaiSanPhams", new { id = item.MaLoaiSP })">
+                                <i class="fas fa-trash delete"></i>
+                            </a>
+                            }
                     </td>
                 </tr>
                 stt++;
