--- a/chuyende/chuyende/Areas/Admin/Views/Hangs/Edit.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/Hangs/Edit.cshtml
@@ -24,7 +24,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Logo, "Logo", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <input type="file" name="Logo" id="Logo" class="form-control" />
+            <input type="file" name="LogoFile" id="LogoFile" class="form-control" />
             @Html.ValidationMessageFor(model => model.Logo, "", new { @class = "text-danger" })
         </div>
     </div>
