--- a/chuyende/chuyende/Views/Home/Index.cshtml
+++ b/chuyende/chuyende/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
-﻿@{
-    ViewBag.Title = "ELECTRONICS STORE";
+﻿
+@{
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-dskdjkkdpf
+<h2>Index</h2>
+
