--- a/chuyende/chuyende/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="~/Public/css/Admin/layoutadmin.css">
-    <link rel="stylesheet" href="~/Public/css/Admin/admin.css">
+    <link rel="stylesheet" href="~/Public/css/Admin/cssadmin.css">
     <link rel="stylesheet" href="~/Public/css/Admin/Detailssp.css">
     <title>@ViewBag.Title</title>
     <link rel="icon" type="image/png" href="~/img/logo/logo.png">
