--- a/chuyende/chuyende/Areas/Admin/Views/ChucVus/Index.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/ChucVus/Index.cshtml
@@ -26,7 +26,13 @@
     </div>
 
     <div class="actions">
-        <a href="@Url.Action("Create", "ChucVus")" class="add-btn">Thêm mới</a>
+        <a href="@Url.Action("Create", "ChucVus")" class="add-btn">
+            <i class="fas fa-plus"></i> Thêm mới
+        </a>
+        <a href="@Url.Action("Trash", "ChucVus")" class="trash-btn">
+            <i class="fas fa-trash"></i> Thùng rác
+        </a>
+
     </div>
 
     <table>
@@ -47,16 +53,22 @@
                     <td>@Html.DisplayFor(modelItem => item.MaCV)</td>
                     <td>@Html.DisplayFor(modelItem => item.TenCV)</td>
                     <td class="action-icons">
-                        <a href="@Url.Action("Edit","ChucVus", new { id = item.MaCV })">
-                            <i class="fas fa-edit edit"></i>
+                        <a href="@Url.Action("Edit","ChucVus", new { id = item.MaCV })" class="btn-icon edit">
+                            <i class="fas fa-edit"></i>
                         </a>
-                        <a href="@Url.Action("Details","ChucVus", new { id = item.MaCV })">
-                            <i class="fas fa-eye view"></i>
+                        <a href="@Url.Action("Details","ChucVus", new { id = item.MaCV })" class="btn-icon view">
+                            <i class="fas fa-eye"></i>
                         </a>
-                        <a href="@Url.Action("Delete","ChucVus", new { id = item.MaCV })">
-                            <i class="fas fa-trash delete"></i>
-                        </a>
+                        @using (Html.BeginForm("MoveToTrash", "ChucVus", new { id = item.MaCV }, FormMethod.Post, new { @class = "delete-form" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            <button type="submit" class="btn-icon delete">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        }
                     </td>
+
+
                 </tr>
                 stt++;
             }
