--- a/chuyende/chuyende/Areas/Admin/Views/LoaiSanPhams/Index.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/LoaiSanPhams/Index.cshtml
@@ -24,10 +24,15 @@
 
     </div>
 
-        <div class="actions">
-            <a href="@Url.Action("Create", "LoaiSanPhams")" class="add-btn">Thêm mới</a>
-        </div>
-    
+    <div class="actions">
+        <a href="@Url.Action("Create", "LoaiSanPhams")" class="add-btn">
+            <i class="fas fa-plus"></i> Thêm mới
+        </a>
+        <a href="@Url.Action("Trash", "LoaiSanPhams")" class="trash-btn">
+            <i class="fas fa-trash"></i> Thùng rác
+        </a>
+
+    </div>
         
 
     <table>
@@ -48,17 +53,19 @@
                     <td>@Html.DisplayFor(modelItem => item.MaLoaiSP)</td>
                     <td>@Html.DisplayFor(modelItem => item.TenLoaiSP)</td>
                     <td class="action-icons">
-                            <a href="@Url.Action("Edit","LoaiSanPhams", new { id = item.MaLoaiSP })">
-                                <i class="fas fa-edit edit"></i>
-                            </a>
-                        
-                        <a href="@Url.Action("Details","LoaiSanPhams", new { id = item.MaLoaiSP })">
-                            <i class="fas fa-eye view"></i>
+                        <a href="@Url.Action("Edit","LoaiSanPhams", new { id = item.MaLoaiSP })" class="btn-icon edit">
+                            <i class="fas fa-edit"></i>
                         </a>
-                            <a href="@Url.Action("Delete","LoaiSanPhams", new { id = item.MaLoaiSP })">
-                                <i class="fas fa-trash delete"></i>
-                            </a>
-                           
+                        <a href="@Url.Action("Details","LoaisanPhams", new { id = item.MaLoaiSP })" class="btn-icon view">
+                            <i class="fas fa-eye"></i>
+                        </a>
+                        @using (Html.BeginForm("MoveToTrash", "LoaSanPhams", new { id = item.MaLoaiSP }, FormMethod.Post, new { @class = "delete-form" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            <button type="submit" class="btn-icon delete">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        }
                     </td>
                 </tr>
                 stt++;
