--- a/chuyende/chuyende/Areas/Admin/Views/NhanViens/Index.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/NhanViens/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<chuyende.Models.NhanVien>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Danh sách nhân viên";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
@@ -33,9 +33,14 @@
             </button>
         }
 
-        <div class="actions">
-            <a href="@Url.Action("Create", "NhanViens")" class="add-btn">Thêm mới</a>
-        </div>
+    <div class="actions">
+        <a href="@Url.Action("Create", "NhanViens")" class="add-btn">
+            <i class="fas fa-plus"></i> Thêm mới
+        </a>
+        <a href="@Url.Action("Trash", "NhanViens")" class="trash-btn">
+            <i class="fas fa-trash"></i> Thùng rác
+        </a>
+    </div>
     </div>
 
     <table>
@@ -67,15 +72,20 @@
                     <td>@Html.DisplayFor(modelItem => item.DiaChi)</td>
                     <td>@Html.DisplayFor(modelItem => item.SoDienThoai)</td>
                     <td class="action-icons">
-                        <a href="@Url.Action("Edit","NhanViens", new { id = item.MaNV })">
-                            <i class="fas fa-edit edit"></i>
+                        <a href="@Url.Action("Edit","Nhanviens", new { id = item.MaNV })" class="btn-icon edit">
+                            <i class="fas fa-edit"></i>
                         </a>
-                        <a href="@Url.Action("Details","NhanViens", new { id = item.MaNV })">
-                            <i class="fas fa-eye view"></i>
+                        <a href="@Url.Action("Details","NhanViens", new { id = item.MaNV })" class="btn-icon view">
+                            <i class="fas fa-eye"></i>
                         </a>
-                        <a href="@Url.Action("Delete","NhanViens", new { id = item.MaNV })">
-                            <i class="fas fa-trash delete"></i>
-                        </a>
+                        @using (Html.BeginForm("MoveToTrash", "NhanViens", new { id = item.MaNV }, FormMethod.Post, new { @class = "delete-form" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            <button type="submit" class="btn-icon delete">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        }
+
                     </td>
                 </tr>
                 stt++;
