--- a/chuyende/chuyende/Areas/Admin/Views/ChucVus/Index.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/ChucVus/Index.cshtml
@@ -35,44 +35,43 @@
 
     </div>
 
-    <table>
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Mã chức vụ</th>
-                <th>Tên chức vụ</th>
-                <th>Chức năng</th>
-            </tr>
-        </thead>
-        <tbody>
-            @{ int stt = 1; }
-            @foreach (var item in Model)
-            {
+    <div class="table-responsive">
+        <table class="table table-bordered table-hover">
                 <tr>
-                    <td>@stt</td>
-                    <td>@Html.DisplayFor(modelItem => item.MaCV)</td>
-                    <td>@Html.DisplayFor(modelItem => item.TenCV)</td>
-                    <td class="action-icons">
-                        <a href="@Url.Action("Edit","ChucVus", new { id = item.MaCV })" class="btn-icon edit">
-                            <i class="fas fa-edit"></i>
-                        </a>
-                        <a href="@Url.Action("Details","ChucVus", new { id = item.MaCV })" class="btn-icon view">
-                            <i class="fas fa-eye"></i>
-                        </a>
-                        @using (Html.BeginForm("MoveToTrash", "ChucVus", new { id = item.MaCV }, FormMethod.Post, new { @class = "delete-form" }))
-                        {
-                            @Html.AntiForgeryToken()
-                            <button type="submit" class="btn-icon delete">
-                                <i class="fas fa-trash"></i>
-                            </button>
-                        }
-                    </td>
-
-
+                    <th>#</th>
+                    <th>Mã chức vụ</th>
+                    <th>Tên chức vụ</th>
+                    <th>Chức năng</th>
                 </tr>
-                stt++;
-            }
-        </tbody>
-    </table>
+            <tbody>
+                @{ int stt = 1; }
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@stt</td>
+                        <td>@Html.DisplayFor(modelItem => item.MaCV)</td>
+                        <td>@Html.DisplayFor(modelItem => item.TenCV)</td>
+                        <td class="text-start">
+                            <a href="@Url.Action("Edit","ChucVus", new { id = item.MaCV })" class="btn btn-warning btn-sm">
+                                <i class="fas fa-edit"></i>
+                            </a>
+                            <a href="@Url.Action("Details","ChucVus", new { id = item.MaCV })" class="btn btn-info btn-sm">
+                                <i class="fas fa-eye"></i>
+                            </a>
+                            @using (Html.BeginForm("MoveToTrash", "ChucVus", new { id = item.MaCV }, FormMethod.Post, new { @class = "d-inline" }))
+                            {
+                                @Html.AntiForgeryToken()
+                                <button type="submit" class="btn btn-danger btn-sm">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                            }
+                        </td>
+                    </tr>
+                    stt++;
+                }
+            </tbody>
+        </table>
+    </div>
+    </div>
 </div>
 
