--- a/chuyende/chuyende/Areas/Admin/Views/NhanViens/Index.cshtml
+++ b/chuyende/chuyende/Areas/Admin/Views/NhanViens/Index.cshtml
@@ -33,18 +33,18 @@
             </button>
         }
 
-    <div class="actions">
-        <a href="@Url.Action("Create", "NhanViens")" class="add-btn">
-            <i class="fas fa-plus"></i> Thêm mới
-        </a>
-        <a href="@Url.Action("Trash", "NhanViens")" class="trash-btn">
-            <i class="fas fa-trash"></i> Thùng rác
-        </a>
-    </div>
+        <div class="actions">
+            <a href="@Url.Action("Create", "NhanViens")" class="add-btn">
+                <i class="fas fa-plus"></i> Thêm mới
+            </a>
+            <a href="@Url.Action("Trash", "NhanViens")" class="trash-btn">
+                <i class="fas fa-trash"></i> Thùng rác
+            </a>
+        </div>
     </div>
 
-    <table>
-        <thead>
+    <div class="table-responsive">
+        <table class="table table-bordered table-hover">
             <tr>
                 <th>#</th>
                 <th>Mã nhân viên</th>
@@ -55,41 +55,41 @@
                 <th>Số điện thoại</th>
                 <th>Chức năng</th>
             </tr>
-        </thead>
-        <tbody>
-            @{ int stt = 1; }
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>@stt</td>
-                    <td>@Html.DisplayFor(modelItem => item.MaNV)</td>
-                    <td>@Html.DisplayFor(modelItem => item.TenNV)</td>
-                    <td>@Html.DisplayFor(modelItem => item.ChucVu.TenCV)</td>
-                    <td>
-                        <span>@(item.GioiTinh ? "Nam" : "Nữ")</span>
-
-                    </td>
-                    <td>@Html.DisplayFor(modelItem => item.DiaChi)</td>
-                    <td>@Html.DisplayFor(modelItem => item.SoDienThoai)</td>
-                    <td class="action-icons">
-                        <a href="@Url.Action("Edit","Nhanviens", new { id = item.MaNV })" class="btn-icon edit">
-                            <i class="fas fa-edit"></i>
-                        </a>
-                        <a href="@Url.Action("Details","NhanViens", new { id = item.MaNV })" class="btn-icon view">
-                            <i class="fas fa-eye"></i>
-                        </a>
-                        @using (Html.BeginForm("MoveToTrash", "NhanViens", new { id = item.MaNV }, FormMethod.Post, new { @class = "delete-form" }))
-                        {
-                            @Html.AntiForgeryToken()
-                            <button type="submit" class="btn-icon delete">
-                                <i class="fas fa-trash"></i>
-                            </button>
-                        }
-
-                    </td>
-                </tr>
-                stt++;
-            }
-        </tbody>
-    </table>
+            <tbody>
+                @{ int stt = 1; }
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@stt</td>
+                        <td>@Html.DisplayFor(modelItem => item.MaNV)</td>
+                        <td>@Html.DisplayFor(modelItem => item.TenNV)</td>
+                        <td>@Html.DisplayFor(modelItem => item.ChucVu.TenCV)</td>
+                        <td>
+                            <span>@(item.GioiTinh ? "Nam" : "Nữ")</span>
+                        </td>
+                        <td>@Html.DisplayFor(modelItem => item.DiaChi)</td>
+                        <td>@Html.DisplayFor(modelItem => item.SoDienThoai)</td>
+                        <td class="text-start">
+                            <a href="@Url.Action("Edit","Nhanviens", new { id = item.MaNV })" class="btn btn-warning btn-sm">
+                                <i class="fas fa-edit"></i>
+                            </a>
+                            <a href="@Url.Action("Details","NhanViens", new { id = item.MaNV })" class="btn btn-info btn-sm">
+                                <i class="fas fa-eye"></i>
+                            </a>
+                            @using (Html.BeginForm("MoveToTrash", "NhanViens", new { id = item.MaNV }, FormMethod.Post, new { @class = "d-inline" }))
+                            {
+                                @Html.AntiForgeryToken()
+                                <button type="submit" class="btn btn-danger btn-sm">
+                                    <i class="fas fa-trash"></i>
+                                </button>
+                            }
+                        </td>
+                    </tr>
+                    stt++;
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
+
+
